--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "nextjs-demo",
+  "name": "arbeidskrav",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://julienielsen98.github.io/Arbeidskrav-hotdogshops",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -25,6 +27,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "sass": "^1.58.0"
   }
 }
