--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "npm run build && gh-pages -d build -b gh-pages"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -29,5 +29,9 @@
   "devDependencies": {
     "gh-pages": "^5.0.0",
     "sass": "^1.58.0"
-  }
+  },
+  "files": [
+    "build",
+    "public"
+  ]
 }
